improve journal interface